remove patches updates from API + Sonar
